<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <!-- date toolbar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/calendarHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white">

        <ImageButton
            android:id="@+id/previousButton"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="25dp"
            android:layout_height="0dp"
            android:contentDescription="@string/material_calendar_monday"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/_20sdp"
            app:tint="@color/grey2" />

        <ImageButton
            android:id="@+id/forwardButton"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="25dp"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:contentDescription="@string/material_calendar_monday"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/grey1" />

        <TextView
            android:id="@+id/currentDateLabel"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="testubg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/previousButton"
            app:layout_constraintEnd_toStartOf="@+id/forwardButton"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- eventDays header -->
    <LinearLayout
        android:id="@+id/abbreviationsBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="40dp"
        app:layout_constraintTop_toBottomOf="@+id/calendarHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mondayLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/material_calendar_monday"
            android:textColor="@color/daysLabelColor" />

        <TextView
            android:id="@+id/tuesdayLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/material_calendar_tuesday"
            android:textColor="@color/daysLabelColor" />

        <TextView
            android:id="@+id/wednesdayLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/material_calendar_wednesday"
            android:textColor="@color/daysLabelColor" />

        <TextView
            android:id="@+id/thursdayLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/material_calendar_thursday"
            android:textColor="@color/daysLabelColor" />

        <TextView
            android:id="@+id/fridayLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/material_calendar_friday"
            android:textColor="@color/daysLabelColor" />

        <TextView
            android:id="@+id/saturdayLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/material_calendar_saturday"
            android:textColor="@color/daysLabelColor" />

        <TextView
            android:id="@+id/sundayLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/material_calendar_sunday"
            android:textColor="@color/daysLabelColor" />
    </LinearLayout>

        <com.applandeo.materialcalendarview.extensions.CalendarViewPager
            android:id="@+id/calendarViewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/abbreviationsBar" />



</androidx.constraintlayout.widget.ConstraintLayout>